scripts/nullaway/nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8.txt
../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/SET_ArrayPlace.java:14: error: [NullAway] initializer method does not guarantee @NonNull field expression (line 12) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    private SET_ArrayPlace(ArrayPlace... arrayPlaces) {
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/FOR.java:17: error: [NullAway] initializer method does not guarantee @NonNull fields from (line 13), to (line 15) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    private FOR(NumericVariable variable) {
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/IF.java:35: error: [NullAway] assigning @Nullable expression to @NonNull field
            HPBasicProgram.nextLineNumber = lineNumber;
                                          ^
    (see http://t.uber.com/nullaway )
../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/NEXT.java:28: error: [NullAway] unboxing of a @Nullable value
        int maximalValue = HPBasicProgram.maxValueForLoopVariable.get(varName);
                                                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/NEXT.java:30: error: [NullAway] assigning @Nullable expression to @NonNull field
            HPBasicProgram.nextLineNumber = HPBasicProgram.lineNumberForLoopVariable.get(varName);
                                          ^
    (see http://t.uber.com/nullaway )
../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/REPLACE.java:18: error: [NullAway] initializer method does not guarantee @NonNull field expression (line 16) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    private REPLACE(StringVariable variable, NumericExpression from, NumericExpression to) {
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/HPBasicProgram.java:13: error: [NullAway] @NonNull static field nextLineNumber not initialized
    public static Integer nextLineNumber;
                          ^
    (see http://t.uber.com/nullaway )
../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/NumericVariable.java:11: error: [NullAway] initializer method does not guarantee @NonNull field value (line 9) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public NumericVariable(String name) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/FunctionVariable.java:9: error: [NullAway] initializer method does not guarantee @NonNull field body (line 5) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public FunctionVariable(String name) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/ProgramLines.java:32: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return lines.get(lineNumber);
        ^
    (see http://t.uber.com/nullaway )
Note: ../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/functions/TIM.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
10 errors
